# TikDownV2

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f3e688e25279_init.py
backend/src/: config.py  main.py
backend/src/api/routes/: accounts.py  auth.py  cookies.py  events.py  monitor.py  system.py  videos.py
backend/src/core/: auth.py  backfill.py  backoff.py  circuit_breaker.py  cookies.py  crypto.py  disk_monitor.py  download_engine.py  integrity.py  network_monitor.py  task_queue.py  yt_dlp_checker.py
backend/src/core/notifications/: base.py  service.py  telegram.py
backend/src/core/notifications/telegram_bot/: bot.py  commands.py  dispatcher.py  keyboards.py
backend/src/db/: session.py
backend/src/db/models/: __init__.py  admin.py  cookie.py  event.py  monitored_account.py  setting.py  video.py
backend/src/services/: __init__.py  accounts.py  backup.py  cookies.py  monitor.py  settings.py  videos.py
backend/src/tests/integration/: test_cookies.py  test_download_engine.py
backend/src/tests/unit/: test_backoff.py  test_circuit_breaker.py  test_crypto.py
frontend/: .eslintrc.cjs  index.html  openapi-codegen.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/scripts/: codegen.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Badge.tsx  Button.tsx  EmptyState.tsx  Icon.tsx  ProgressBar.tsx  (+3 more)
(+31 files in other folders)
