[project]
name = "tikdown"
version = "0.1.0"
description = "TikDown — Monitor y descargas de TikTok"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "alembic",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "yt-dlp>=2026.06",
    "curl-cffi>=0.7",
    "cryptography",
    "argon2-cffi",
    "apscheduler",
    "httpx",
    "structlog",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpx",
    "pytest-cov",
    "ruff",
]

# Dev: uv run uvicorn src.main:app --reload --port 8000

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
